<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.xxx.volunterNetwork</groupId>
  <artifactId>volunterNetwork_parent</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  
 <!-- 版本管理 -->
	<properties>
    <jdk.version>1.8</jdk.version>
  	<spring.version>4.3.13.RELEASE</spring.version>
  	<struts2.version>2.3.24</struts2.version>
  	<aspectj.version>1.8.13</aspectj.version> 	
  	<jackson.version>2.9.3</jackson.version>
  	<joda.version>2.3</joda.version>
  	<jsp.version>2.3.1</jsp.version>
	<servlet.version>3.1.0</servlet.version>
	<slf4j.version>1.7.25</slf4j.version>	
  	<spring-data-jpa.version>1.11.9.RELEASE</spring-data-jpa.version>
    <hibernate.version>5.2.12.Final</hibernate.version>
    <mysql.version>5.1.38</mysql.version>  
    <junit.version>4.12</junit.version>
    <shiro.version>1.2.2</shiro.version>
    <rome.version>1.5.0</rome.version>
    <ehcache.version>2.6.6</ehcache.version>
    <slf4j.version>1.7.12</slf4j.version>
    <commons.version>3.4</commons.version>
    <cglib.version>2.2.2</cglib.version>
    <poi.version>3.9</poi.version>
    <jstl.version>1.2</jstl.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  
  <!-- 依赖管理 -->
  <dependencies>
  	<!-- Spring Framework -->
  	<dependency>
	    <groupId>org.springframework</groupId>
	    <artifactId>spring-context</artifactId>
	    <version>${spring.version}</version>
	</dependency>	
	<!-- ============================Spring ORM=============================== -->
	<!-- Spring ORM -->
	<dependency>
	    <groupId>org.springframework</groupId>
	    <artifactId>spring-orm</artifactId>
	    <version>${spring.version}</version>
	</dependency>	
	<!-- AOP -->
	<dependency>
	    <groupId>org.aspectj</groupId>
	    <artifactId>aspectjrt</artifactId>
	    <version>${aspectj.version}</version>
	</dependency>
	<dependency>
	    <groupId>org.aspectj</groupId>
	    <artifactId>aspectjweaver</artifactId>
	    <version>${aspectj.version}</version>
	</dependency>	
   <!-- Hibernate Framework-->
  	<dependency>
	    <groupId>org.hibernate</groupId>
	    <artifactId>hibernate-core</artifactId>
	    <version>${hibernate.version}</version>
	</dependency>
	<dependency>
	    <groupId>org.hibernate</groupId>
	    <artifactId>hibernate-c3p0</artifactId>
	    <version>${hibernate.version}</version>
	</dependency>	
	<!-- JPA -->
	<dependency>
	    <groupId>org.springframework.data</groupId>
	    <artifactId>spring-data-jpa</artifactId>
	    <version>${spring-data-jpa.version}</version>
	</dependency>	
	<dependency>
	    <groupId>org.hibernate</groupId>
	    <artifactId>hibernate-entitymanager</artifactId>
	    <version>${hibernate.version}</version>
	</dependency>	
	<!-- mysql connector-->
	<dependency>
	    <groupId>mysql</groupId>
	    <artifactId>mysql-connector-java</artifactId>
	    <version>${mysql.version}</version>
	</dependency>
  	<!-- ============================Spring Web=============================== -->
	<dependency>
	    <groupId>org.springframework</groupId>
	    <artifactId>spring-webmvc</artifactId>
	    <version>${spring.version}</version>
	</dependency>
	<!-- ============================ Web 3.1 =============================== -->
	<!-- JSON -->
	<dependency>
	    <groupId>com.fasterxml.jackson.core</groupId>
	    <artifactId>jackson-databind</artifactId>
	    <version>${jackson.version}</version>
	</dependency>
	<!-- Joda Time Library -->
	<dependency>
		<groupId>joda-time</groupId>
		<artifactId>joda-time</artifactId>
		<version>${joda.version}</version>
	</dependency>		
	<!-- Rome Atom+RSS -->
	<dependency>
		<groupId>com.rometools</groupId>
		<artifactId>rome</artifactId>
		<version>${rome.version}</version>
		
	</dependency>
	<!-- web servlet -->
	<dependency>
	    <groupId>javax.servlet.jsp</groupId>
	    <artifactId>javax.servlet.jsp-api</artifactId>
	    <version>${jsp.version}</version>
	    <scope>provided</scope>
	</dependency>
	<dependency>
	    <groupId>javax.servlet</groupId>
	    <artifactId>javax.servlet-api</artifactId>
	    <version>${servlet.version}</version>
	    <scope>provided</scope>
	</dependency>
	
	<!-- log4j -->
	<dependency>
	    <groupId>org.slf4j</groupId>
	    <artifactId>slf4j-log4j12</artifactId>
	    <version>${slf4j.version}</version>
	    <scope>test</scope>
	</dependency>
	<!-- ============================Spring Test=============================== -->
	<dependency>
	    <groupId>org.springframework</groupId>
	    <artifactId>spring-test</artifactId>
	    <version>${spring.version}</version>
	    <scope>test</scope>
	</dependency>
	
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
     <!-- JSON -->
	<dependency>
	    <groupId>org.json</groupId>
	    <artifactId>json</artifactId>
	    <version>20160810</version>
	</dependency>
	<!-- 添加shiro支持 --> 
     <dependency>
         <groupId>org.apache.shiro</groupId>
         <artifactId>shiro-all</artifactId>
         <version>${shiro.version}</version>         
     </dependency> 
     <dependency>
    	<groupId>net.sf.ehcache</groupId>
    	<artifactId>ehcache-core</artifactId>
    	<version>${ehcache.version}</version>   	
    </dependency>     
     <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-log4j12</artifactId>
         <version>${slf4j.version}</version>      
     </dependency>     
     <dependency>
	    <groupId>org.apache.commons</groupId>
	    <artifactId>commons-lang3</artifactId>
	    <version>${commons.version}</version>	    
	</dependency>	
	<!-- cglib -->
	<dependency>
	    <groupId>cglib</groupId>
	    <artifactId>cglib</artifactId>
	    <version>${cglib.version}</version>	    
	</dependency>
	<!-- POI -->
	<dependency>
		<groupId>org.apache.poi</groupId>
		<artifactId>poi</artifactId>
		<version>${poi.version}</version>		
	</dependency>
	<!-- jstl -->
    <dependency>
	  <groupId>jstl</groupId>
	  <artifactId>jstl</artifactId>
	  <version>${jstl.version}</version>
	  
   </dependency>    
   <!-- jfree -->
   <dependency>
    <groupId>org.jfree</groupId>
    <artifactId>jcommon</artifactId>
    <version>1.0.23</version>
   </dependency>
   <dependency>
    <groupId>org.jfree</groupId>
    <artifactId>jfreechart</artifactId>
    <version>1.0.19</version>
   </dependency>
   <!-- struts2  begin -->
		<dependency>
			<groupId>org.apache.struts</groupId>
			<artifactId>struts2-core</artifactId>
			<version>${struts2.version}</version>
			<exclusions>
				<exclusion>
					<artifactId>javassist</artifactId>
					<groupId>javassist</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.struts</groupId>
			<artifactId>struts2-spring-plugin</artifactId>
			<version>${struts2.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.struts</groupId>
			<artifactId>struts2-json-plugin</artifactId>
			<version>${struts2.version}</version>
		</dependency>
		<dependency>
	  		<groupId>org.apache.struts</groupId>
	  		<artifactId>struts2-convention-plugin</artifactId>
	  		<version>${struts2.version}</version>
	  	</dependency>
  </dependencies>
  
 
	
  <build>
  	  <finalName>volunterNetwork_parent</finalName>
      <plugins>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-compiler-plugin</artifactId>
              <version>3.1</version>
              <configuration>
                  <source>${jdk.version}</source>
                  <target>${jdk.version}</target>
                  <encoding>${project.build.sourceEncoding}</encoding>
                  <showWarnings>true</showWarnings>
              </configuration>
          </plugin>
          <plugin>
			<groupId>org.apache.tomcat.maven</groupId>
			<artifactId>tomcat7-maven-plugin</artifactId>
			<version>2.2</version>
			<configuration>
		        <charset>${project.build.sourceEncoding}</charset>
		        <uriEncoding>${project.build.sourceEncoding}</uriEncoding>
		        <port>8080</port>
		        <!-- 
		        <systemProperties>
                    <JAVA_OPTS>-Xms1024m -Xmx2048m -XX:PermSize=512m -XX:MaxPermSize=1024m -Dfile.encoding=UTF-8</JAVA_OPTS>
                </systemProperties> -->
		    </configuration>
		</plugin>
		<plugin>  
            <groupId>org.apache.maven.plugins</groupId>  
            <artifactId>maven-war-plugin</artifactId>  
            <version>2.3</version>  
            <configuration>  
                <failOnMissingWebXml>false</failOnMissingWebXml>  
            </configuration>  
        </plugin>  
      </plugins>
  </build>
  <modules>
  	<module>volunterNetwork_domain</module>
  	<module>volunterNetwork_web</module>
  	<module>volunterNetwork_utils</module>
  	<module>volunterNetwork_dao</module>
  	<module>volunterNetwork_service</module>
  </modules>
</project>
